--- a/board/am700_core/project_example/project_keil5/example_am700_core.uvprojx
+++ b/board/am700_core/project_example/project_keil5/example_am700_core.uvprojx
@@ -150,7 +150,7 @@
             <RestoreSysVw>1</RestoreSysVw>
           </Target>
           <RunDebugAfterBuild>0</RunDebugAfterBuild>
-          <TargetSelection>1</TargetSelection>
+          <TargetSelection>6</TargetSelection>
           <SimDlls>
             <CpuDll></CpuDll>
             <CpuDllArguments></CpuDllArguments>
@@ -164,7 +164,7 @@
             <PeripheralDll></PeripheralDll>
             <PeripheralDllArguments></PeripheralDllArguments>
             <InitializationFile></InitializationFile>
-            <Driver>BIN\UL2CM3.DLL</Driver>
+            <Driver>Segger\JL2CM3.dll</Driver>
           </TargetDlls>
         </DebugOption>
         <Utilities>
@@ -351,7 +351,7 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>4</Optim>
+            <Optim>1</Optim>
             <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
@@ -981,6 +981,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\..\soc\zlg\drivers\source\lcd\am_zsn700_lcd.c</FilePath>
             </File>
+            <File>
+              <FileName>am_zsn700_reader.lib</FileName>
+              <FileType>4</FileType>
+              <FilePath>..\..\..\..\soc\zlg\drivers\source\reader\am_zsn700_reader.lib</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1465,6 +1470,41 @@
               <FileName>demo_zsn700_core_microport_rx8025t.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\am700_core\microport_board\demo_zsn700_core_microport_rx8025t.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_picca_halt.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_picca_halt.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_picca_lpcd_read_id.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_picca_lpcd_read_id.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_picca_read_block.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_picca_read_block.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_picca_read_id.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_picca_read_id.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_picca_val_operate.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_picca_val_operate.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_picca_write_block.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_picca_write_block.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_piccb_read_id.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_piccb_read_id.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -2216,6 +2256,11 @@
               <FileType>1</FileType>
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_microport_rx8025t.c</FilePath>
             </File>
+            <File>
+              <FileName>am_hwconf_zsn700_reader.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_zsn700_reader.c</FilePath>
+            </File>
           </Files>
         </Group>
       </Groups>
@@ -2229,7 +2274,7 @@
         <TargetCommonOption>
           <Device>ARMCM0</Device>
           <Vendor>ARM</Vendor>
-          <PackID>ARM.CMSIS.5.4.0</PackID>
+          <PackID>ARM.CMSIS.4.5.0</PackID>
           <PackURL>http://www.keil.com/pack/</PackURL>
           <Cpu>IROM(0x00000000,0x40000) IRAM(0x20000000,0x20000) CPUTYPE("Cortex-M0") CLOCK(12000000) ESEL ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -3195,6 +3240,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\..\soc\zlg\drivers\source\lcd\am_zsn700_lcd.c</FilePath>
             </File>
+            <File>
+              <FileName>am_zsn700_reader.lib</FileName>
+              <FileType>4</FileType>
+              <FilePath>..\..\..\..\soc\zlg\drivers\source\reader\am_zsn700_reader.lib</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -3679,6 +3729,41 @@
               <FileName>demo_zsn700_core_microport_rx8025t.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\am700_core\microport_board\demo_zsn700_core_microport_rx8025t.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_picca_halt.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_picca_halt.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_picca_lpcd_read_id.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_picca_lpcd_read_id.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_picca_read_block.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_picca_read_block.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_picca_read_id.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_picca_read_id.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_picca_val_operate.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_picca_val_operate.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_picca_write_block.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_picca_write_block.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_piccb_read_id.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_piccb_read_id.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -4429,6 +4514,11 @@
               <FileName>am_hwconf_microport_rx8025t.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_microport_rx8025t.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_zsn700_reader.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_zsn700_reader.c</FilePath>
             </File>
           </Files>
         </Group>
