add reader demos and fix libs

--- a/board/am700_core/project_example/project_keil5/example_am700_core.uvprojx
+++ b/board/am700_core/project_example/project_keil5/example_am700_core.uvprojx
@@ -1506,6 +1506,21 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_piccb_read_id.c</FilePath>
             </File>
+            <File>
+              <FileName>demo_zsn700_ntag_read_id.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_ntag_read_id.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_picca_read_cpu_card.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_picca_read_cpu_card.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_picca_read_id_8ant.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_picca_read_id_8ant.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -3764,6 +3779,21 @@
               <FileName>demo_zsn700_piccb_read_id.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_piccb_read_id.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_ntag_read_id.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_ntag_read_id.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_picca_read_cpu_card.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_picca_read_cpu_card.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsn700_picca_read_id_8ant.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am700_core\reader\demo_zsn700_picca_read_id_8ant.c</FilePath>
             </File>
           </Files>
         </Group>
